# oro_base_hardware_layer

./: .gitignore
docs/: FIRMWARE_SETUP.md  ORo_Serial_Protocol_v2.md  README.md  protocol_specification.md  setup_firmware.sh
include/: radxa_services.hpp
oro_base_dummy_firmware/: oro_base_dummy_firmware.ino  oro_protocol.h
oro_base_test_firmware/: oro_base_test_firmware.h  oro_base_test_firmware.ino  oro_protocol.h
radxa_drivers/: CMakeLists.txt  README.md  TROUBLESHOOTING.md
radxa_drivers/configs/: media_config.json
radxa_drivers/docs/: architecture_and_design_choices.md
radxa_drivers/include/common/config/: config_parser.h
radxa_drivers/include/common/logging/: logger.h
radxa_drivers/include/common/timing/: monotonic_clock.h
radxa_drivers/include/common/zmq/: zmq_publisher.h
radxa_drivers/include/media/: audio_pipeline.h  cam_splitter_node.h  video_pipeline.h
radxa_drivers/include/radxa_drivers/: camhead_rotation.hpp  gpio_sensor.hpp  radxa_drivers_node.hpp  radxa_services.hpp  stepper_driver.hpp  treat_dispenser.hpp
radxa_drivers/include/radxa_drivers/drivers/: amg8833.h  amg8833_regs.h
radxa_drivers/schemas/: audio_frame.fbs  av_frame.fbs  video_frame.fbs
radxa_drivers/scripts/: .~lock.chaos_results.csv#  advanced_chaos_testing.py  chaos_results.csv  chaos_testing.py  check_virtual_camera_feed.sh  launch_drivers.py  live_feed_test.sh  phase1_hardware_tests.sh  setup.bash
radxa_drivers/src/: amg8833.c  camhead_rotation.cpp  gpio_sensor.cpp  radxa_drivers_node.cpp  radxa_services.cpp  stepper_driver.cpp  treat_dispenser.cpp
radxa_drivers/src/media/audio_ingestor/: audio_pipeline.cpp  main.cpp
radxa_drivers/src/media/av_receiver/: main.cpp
radxa_drivers/src/media/cam_splitter/: cam_splitter_node.cpp
radxa_drivers/src/media/stream_player/: main.cpp
radxa_drivers/src/media/sync_verifier/: main.cpp
radxa_drivers/src/media/video_ingestor/: main.cpp  video_pipeline.cpp
